--- a/styles/index.css
+++ b/styles/index.css
@@ -4,16 +4,22 @@
     box-sizing: border-box;
     font-family: Spartan;
 }
-
+html {
+    scroll-behavior: smooth;
+  }
 .navbar{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     padding: 0px 8px;
 
+    position: fixed !important;
+
     width: 100%;
     height: 104px;
     
+    z-index: 1000;
+
     background:white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -44,6 +50,7 @@
     flex-grow: 0;
     padding: 42px 16px;
     box-sizing: border-box;
+    background-color: white;
 }
 
 .nav-li:hover{
@@ -103,12 +110,20 @@
     .nav-li{
         padding:42px 8px;
     }
+
+    #journey{
+        flex-direction: column;
+    }
 }
 
-@media only screen and  (max-width:992px){
+@media only screen and  (max-width:990px){
     
     .navbar-expand-lg , .navbar-brand{
         padding: 0px 8px !important;
+    }
+
+    .nav-li{
+        width: 100%;
     }
 
     footer{
@@ -149,7 +164,6 @@ footer{
     background-color: #F5F5F5;
     display: flex !important;
     justify-content: space-evenly;
-    align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
     font-size: 12px;
@@ -161,12 +175,16 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
     flex: 1;
     width: 85%;
     min-width: 180px;
     text-align: justify;
 }
+
+.footer-div img{
+    align-self: flex-start;
+}
+
 
 .footer-div li{
     margin: auto;
@@ -253,4 +271,199 @@ footer h4{
     width: 100% !important;
     /* padding: 0px !important; */
     margin: 0 !important;
+}
+
+#journey{
+    padding: 64px;
+    display: flex;
+}
+
+.journey-left{
+    flex:2;
+    padding-right: 16px;
+}
+
+.journey-right{
+    flex:1;
+}
+
+.journey-icon{
+    width: 64px;
+    height: 64px;
+}
+
+.card-row{
+    display: flex;
+}
+
+.cards{
+    flex:1;
+    text-align: center;
+}
+
+.section-head h1{
+    font-weight: bolder;
+}
+
+#journey p{
+    font-size: 16px;
+}
+
+.journey-details{
+    color: rgba(0, 0, 0, 0.7);
+    padding: 32px 0px 40px 0px;
+}
+
+.cards h4{
+    padding: 8px 0px;
+    font-weight: bold;
+    color: #005580;
+    margin:0px !important;
+}
+
+.cards p{
+    color:rgb(0, 0, 0);
+    font-weight: 500;
+}
+
+.journey-right img{
+    min-width: 100%;
+    width: 550px;
+    height: 550px;
+    border-radius: 16px;
+}
+
+#sponsors{
+    padding:56px 64px;
+    background-color: #E1E1E1;
+    text-align: center;
+}
+
+#sponsors h1{
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+
+#sponsors img{
+    max-width: 300px;
+    height: 100px;
+}
+
+#testimonials{
+    padding:160px 64px 64px 64px;
+    text-align: center;
+}
+
+#testimonials h1{
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+#testimonials img{
+    height: 140px;
+    border-radius: 50%;
+}
+
+
+.testimonials-details, .sponsors-details{
+    padding: 36px 0px;
+}
+
+
+.silder-div, .silder-div2{
+    padding-top:16px;
+    text-align: center !important;
+    margin: auto;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    border:1px solid black !important
+}
+
+.slider-div  img{
+    height: 80px !important;
+    width: 80px !important;
+}
+
+.slider-head img{
+    height: 140px !important;
+    width: 140px !important;
+}
+
+.slider-div .slider-name{
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: bolder;
+    margin: 0;
+    padding-top:8px;
+}
+
+.slider-head .slider-name{
+    color: #005580;
+}
+
+.slider-div .player-detail{
+    background-color: #DF1936;
+    width: 400px;
+    margin: auto;
+    color:white;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 8px 16px;
+}
+
+.slider-div .slide-text{
+    font-family: Rockwell;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: rgba(0, 85, 128, 0.7);
+    margin-top: 14px;
+}
+
+#main{
+    display: flex;
+    padding:180px 128px;
+}
+
+.main-left{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 32px;
+}
+
+.main-left h1{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 77px;
+    letter-spacing: 0.005em;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.main-left h1 span{
+    color: rgba(0, 85, 128, 0.8);
+}
+
+.main-right{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-right img{
+    width: 560px;
+    height: 432px;
+}
+
+#our_team{
+    padding:168px 96px;
+    border:1px solid black;
 }
