--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,20 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Spartan;
+    font-family: League Spartan;
+    /* font-weight: 400; */
 }
+
+
 html {
     scroll-behavior: smooth;
   }
+
+.sportsApp-container{
+    margin: 0 32px;
+    background-color: #FCFCFC;
+}
+
 .navbar{
     display: flex;
     flex-direction: row;
@@ -36,7 +45,6 @@ html {
 
 .nav-li{
     text-transform: uppercase;
-    font-family: Spartan;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -106,57 +114,15 @@ html {
     margin: 0px 2.5px ;
 }
 
-@media only screen and (max-width:1124px){
-    .nav-li{
-        padding:42px 8px;
-    }
-
-    #journey{
-        flex-direction: column;
-    }
-}
-
-@media only screen and  (max-width:990px){
-    
-    .navbar-expand-lg , .navbar-brand{
-        padding: 0px 8px !important;
-    }
-
-    .nav-li{
-        width: 100%;
-    }
-
-    footer{
-        flex-direction: column !important;
-    }
-
-}
-
-@media only screen and (max-width:398px){
-    .navbar-brand{
-        position: relative;
-        top:0px;
-    }    
-
-    footer{
-        flex-direction: column;
-    }
-}
-
 .navbar-toggler-icon{
     color: rgba(0, 0, 0, 0.7);;
     transform: rotate(90deg);
 }
 
-
-#journey{
-    height: 50vw;
-}
-
 .journey-heading{
+    font-size: 72px !important;
     font-weight: bolder;
 }
-
 
 
 /*Footer*/
@@ -274,17 +240,25 @@ footer h4{
 }
 
 #journey{
-    padding: 64px;
     display: flex;
+    padding: 64px;
+    flex-wrap: wrap;
+    overflow: wrap;
 }
 
 .journey-left{
     flex:2;
     padding-right: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .journey-right{
     flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .journey-icon{
@@ -305,13 +279,18 @@ footer h4{
     font-weight: bolder;
 }
 
-#journey p{
-    font-size: 16px;
-}
 
 .journey-details{
-    color: rgba(0, 0, 0, 0.7);
     padding: 32px 0px 40px 0px;
+    font-size: 20px !important;
+    font-weight: 400 !important;
+    font-size: normal !important;
+    color: rgba(0, 0, 0, 0.7);
+
+}
+
+#journey p{
+    font-size: 16px;
 }
 
 .cards h4{
@@ -324,6 +303,7 @@ footer h4{
 .cards p{
     color:rgb(0, 0, 0);
     font-weight: 500;
+    font-size: 20px;
 }
 
 .journey-right img{
@@ -340,6 +320,7 @@ footer h4{
 }
 
 #sponsors h1{
+    font-size: 48px;
     font-weight: bolder;
     text-transform: uppercase;
 }
@@ -356,6 +337,7 @@ footer h4{
 }
 
 #testimonials h1{
+    font-size: 48px;
     font-weight: bolder;
     text-transform: uppercase;
 }
@@ -368,6 +350,10 @@ footer h4{
 
 .testimonials-details, .sponsors-details{
     padding: 36px 0px;
+    font-size: 20px !important;
+    font-weight: 400 !important;
+    font-size: normal !important;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 
@@ -405,12 +391,13 @@ footer h4{
 
 .slider-div .player-detail{
     background-color: #DF1936;
-    width: 400px;
+    display: inline-block;
     margin: auto;
     color:white;
     border-radius: 5px;
     font-size: 16px;
-    padding: 8px 16px;
+    font-weight:600;
+    padding: 6px 16px;
 }
 
 .slider-div .slide-text{
@@ -422,29 +409,37 @@ footer h4{
     text-align: center;
     color: rgba(0, 85, 128, 0.7);
     margin-top: 14px;
+    max-width: 704px;
+    margin: auto;
 }
 
 #main{
     display: flex;
     padding:180px 128px;
+    /* flex-wrap: wrap; */
+    flex-direction: row;
 }
 
 .main-left{
     flex:1;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-right: 32px;
+    align-items: left;
+    padding-right: 16px;
+    flex-direction: column;
+}
+
+.main-left img{
+    width:280px
 }
 
 .main-left h1{
     font-style: normal;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 64px;
     line-height: 77px;
     letter-spacing: 0.005em;
     text-transform: uppercase;
-    text-align: center;
 }
 
 .main-left h1 span{
@@ -464,6 +459,192 @@ footer h4{
 }
 
 #our_team{
-    padding:168px 96px;
-    border:1px solid black;
+    padding: 0px 96px 48px 96px;
+
+}
+
+#our_team  .in-div img{
+    width: 218px;
+    height: 272.5px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 16px;
+    margin: 0 64px;
+}
+
+#our_team .card-row {
+    padding: 50px 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#our_team .member-detail{
+    padding: 8px 0px;
+    font-size: 24px;
+}
+
+
+#our_team .cards .in-div .member-name{
+    padding: 0 !important;
+    font-weight: 700;
+    font-size: 32px;
+    text-transform: uppercase;
+}
+
+
+#our_team .member-detail .member-position{
+    font-size: 24px !important;
+    font-weight: 400;
+    font-weight: 400 !important;
+    font-size: normal !important;
+    color: rgba(0, 0, 0, 0.9);
+}
+
+#aboutus{
+    padding: 80px 64px;
+}
+
+#aboutus h1{
+    font-size: 72px !important;
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+.aboutus-cards{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 48px 0;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.aboutus-card{
+    width: 33%;
+    padding: 16px 32px;
+}
+
+#aboutus img{
+    width:64px;
+    height:64px;
+    margin-bottom: 8px;
+}
+
+#aboutus .feature-name{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 32px;
+    padding: 0 !important;
+    margin: 0 !important;
+    color:rgba(0, 0, 0, 0.8)
+}
+
+#aboutus .feature-detail{
+    font-size: 20px;
+    /* font-weight: 300; */
+    /* font-style: bolder; */
+    text-align: justify;
+
+    color:rgba(0, 0, 0, 0.7)
+}
+
+.heading-text{
+    font-size: 72px;
+}
+
+#our_team .cards{
+    padding: 32px;
+}
+
+/* #our_team .cards .in-div, */
+.dp-image{
+    position: relative;
+    width: 218px;
+} 
+
+.in-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.in-div img{
+    margin: 0 !important;
+}
+
+.linkedin-logo{
+    margin: 0!important;
+    z-index: 100;
+    position: absolute;
+    right:10px;
+    top:10px; 
+    width:32px !important;
+    height: 32px !important;
+    cursor: pointer;
+    border-radius: 0px !important;
+}
+
+@media only screen and (max-width:1124px){
+    .nav-li{
+        padding:42px 8px;
+    }
+
+    #journey{
+        flex-wrap: wrap;
+    }
+
+    .journey-left{
+        flex:1;
+        padding:0px;
+        padding-right: 0px;
+    }
+
+    #main{
+        padding-left: 64px;
+        padding-right: 64px;
+        flex-wrap: wrap;
+    }
+
+}
+
+@media only screen and  (max-width:990px){
+    
+    .navbar-expand-lg , .navbar-brand{
+        padding: 0px 8px !important;
+    }
+
+    .nav-li{
+        width: 100%;
+    }
+
+    footer{
+        flex-direction: column !important;
+    }
+
+    .aboutus-card{
+        width: 50%;
+    }
+
+
+    #main{
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+}
+
+@media only screen and (max-width:398px){
+    .navbar-brand{
+        position: relative;
+        top:0px;
+    }    
+
+    footer{
+        flex-direction: column;
+    }
+
+    #main{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
 }
