--- a/styles/blog.css
+++ b/styles/blog.css
@@ -147,7 +147,7 @@
 .recent td{
     padding: 8px 0px;
     cursor: pointer;
-    border-top: 0.5px solid lightgray;
+    border-bottom: 0.5px solid lightgray;
     font-size: 20px;
 }
 
