--- a/styles/index.css
+++ b/styles/index.css
@@ -233,7 +233,7 @@ footer h4{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 16px;
+    padding: 0px 24px;
 }
 
 
@@ -725,3 +725,10 @@ footer h4{
     justify-content: center;
     align-items: center;
 }
+/* 
+.carousel-inner .carousel-item {
+    transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  }
+   */
