--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,13 @@
+@font-face {
+    font-family: 'League_Spartan';
+    src: url('../fonts/league-spartan/1.ttf') format('truetype');
+}
+
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: League Spartan;
+    font-family: League_Spartan;
     /* font-weight: 400; */
 }
 
