--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,13 +1,19 @@
+
 .page-container, .readblog-container{
     padding: 160px 0px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     margin: 0 32px;
-    background-color: #FCFCFC;
+    background-color: #FFF;
     /* flex-wrap: wrap; */
 }
-
+.blog-active h2{
+    color: black;
+}
+.blog-title{
+    cursor: pointer;
+}
 .about-us-container{
     min-width: 344px;
     max-width: 344px;
@@ -40,12 +46,6 @@
 .blog-active p{
     margin-bottom: 0;
 }
-
-.blog-section .blog-title, .blog-detail-title{
-    font-family: Rockwell;
-    /* font-size: 48px; */
-}
-
 .right-aside-container{
     padding-top: 56px !important;
     min-width: 344px;
@@ -121,11 +121,20 @@
     width:149px;
 }
 
-.read-more-btn, .about-us-container button{
+.read-more-btn {
     padding: 8px 16px;
     box-shadow: 0px 0px 8px lightgray;
     background-color: #FCFCFC;
     border: 0px;
+    outline:none;
+    border-radius:8px;
+}
+.about-us-container button{
+
+    padding: 8px 16px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    background-color: #FCFCFC;
+    border:0px;
     outline:none;
     border-radius:8px;
 }
@@ -171,10 +180,10 @@
 }
 
 .blog-section p{
-    /* font-size: 32px; */
+    font-size: 21px;
+    line-height: 32px;
+    color:rgba(0, 0, 0, 0.8);
 }
-
-
 @media only screen and (max-width:990px){
     .right-aside-container{
         padding: 24px;;
