--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,7 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto;
+
     /* font-weight: 400; */
 }
 
@@ -464,7 +464,6 @@ footer h4{
 }
 
 .slider-div .slide-text{
-    font-family: Roboto;
     font-style: italic;
     font-weight: bold;
     font-size: 20px;
@@ -479,31 +478,32 @@ footer h4{
 
 #main{
     display: flex;
-    padding:180px 64px 0px 64px;
-    /* flex-wrap: wrap; */
+    padding-top:104px;
+    width: 99vw;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .main-left{
-    flex:1;
+    padding-left:64px;
+    padding-top: 32px;
     display: flex;
-    justify-content: space-between;
-    align-items: left;
-    padding-right: 16px;
+    width: 50%;
+    align-items: flex-start;
     flex-direction: column;
-
+    z-index: 1;
 }
 
 .main-left img{
-    width:280px
+    width:240px
 }
 
 .main-left h1{
     font-style: normal;
-    font-weight: bold;
+    font-weight: 800 !important;
     font-size: 64px;
-    line-height: 77px;
-    letter-spacing: 0.005em;
+    line-height: 65px;
+    letter-spacing: 0.0001px;
     text-transform: uppercase;
 }
 
@@ -512,17 +512,26 @@ footer h4{
 }
 
 .main-right{
-    flex:1;
+    position: relative;
     display: flex;
-    justify-content: center;
+    width: 75%;
+    align-items: flex-end;
+    flex-direction: column;
+}
+.main-gradient{
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    position: absolute;
+    object-fit: cover;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 20%);
+    z-index: 2;
+}
+.main-right video{
+    width: 100%;
     align-items: center;
 }
-
-.main-right img{
-    width: 500px;
-    height: 500px;
-}
-
 #our_team{
     text-align: center;
     padding: 160px 96px 0px 96px;
@@ -566,7 +575,7 @@ footer h4{
 }
 
 #aboutus{
-    padding: 160px 64px 0 64px;
+    padding: 64px 64px 0 64px;
 }
 
 #aboutus h1{
@@ -664,11 +673,33 @@ footer h4{
         padding-right: 0px;
     }
 
+
     #main{
-        padding-left: 64px;
-        padding-right: 64px;
-        flex-wrap: wrap;
+        align-items: center;
+        padding: 16px 16px;
+        flex-direction: column-reverse;
+    }
+    .main-left{
+        padding: 0;
+        align-items: center;
+        width: 100vw;
+    }   
+    .main-left h1 {
         text-align: center;
+        font-style: normal;
+        font-weight: bolder;
+    }
+    .main-left img{
+        margin-top: 20px;
+        width: 200px;
+    }
+    .main-right{
+        width: 100vw;
+        align-items: center;
+    }
+    .main-gradient{
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 20%);
     }
 
 
@@ -677,6 +708,7 @@ footer h4{
 @media only screen and  (max-width:990px){
     
     .navbar-expand-lg , .navbar-brand{
+        z-index: 1000;
         padding: 0px 8px !important;
     }
     .nav-li{
@@ -692,6 +724,9 @@ footer h4{
     footer{
         flex-direction: column !important;
     }
+    .navbar{
+        z-index: 1000;
+    }
 
     .aboutus-card{
         width: 50%;
@@ -701,10 +736,32 @@ footer h4{
         padding-left: 32px;
         padding-right: 32px;
     }
-
     #main{
-        padding-left: 32px;
-        padding-right: 32px;
+        align-items: center;
+        padding: 16px 16px;
+        flex-direction: column-reverse;
+    }
+    .main-left{
+        padding: 0;
+        align-items: center;
+        width: 100vw;
+    }   
+    .main-left h1 {
+        text-align: center;
+        font-style: normal;
+        font-weight: bolder
+    }
+    .main-left img{
+        margin-top: 20px;
+        width: 200px;
+    }
+    .main-right{
+        width: 100vw;
+        align-items: center;
+    }
+    .main-gradient{
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 20%);
     }
 
 }
@@ -724,10 +781,6 @@ footer h4{
         height: 400px;
 
     }
-    .main-right img{
-        width: 400px;
-        height: 400px;
-    }
     .bars{
         display: none !important;
     }
@@ -745,6 +798,33 @@ footer h4{
     }
     .sportsApp-container{
         z-index: -2;
+    }
+    #main{
+        align-items: center;
+        padding: 16px 16px;
+        flex-direction: column-reverse;
+    }
+    .main-left{
+        padding: 0;
+        align-items: center;
+        width: 100vw;
+    }   
+    .main-left h1 {
+        text-align: center;
+        font-style: normal;
+        font-weight: bolder;
+    }
+    .main-left img{
+        margin-top: 20px;
+        width: 200px;
+    }
+    .main-right{
+        width: 100vw;
+        align-items: center;
+    }
+    .main-gradient{
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 20%);
     }
 }
 
@@ -773,14 +853,19 @@ footer h4{
     #main{
         align-items: center;
         padding: 16px 16px;
-        margin-top: 20px;
+        flex-direction: column-reverse;
     }
     .main-left{
+        margin-top: 24px;
+        padding: 0;
         align-items: center;
+        width: 100vw;
     }   
     .main-left h1 {
+        text-align: center;
         font-style: normal;
         font-weight: bolder;
+        font-size: 32px !important;
         line-height: 42px;
     }
     .main-left img{
@@ -788,17 +873,19 @@ footer h4{
         width: 200px;
     }
     .main-right{
-        margin-top: 88px;
+        align-items: center;
+    }
+    .main-gradient{
+        margin-top: 2px;
+        width: 100vw;
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 20%);
     }
     .journey-right img{
         
         width: 200px;
         height: 200px;
 
-    }
-    .main-right img{
-        width: 240px;
-        height: 240px;
     }
     #aboutus{
         align-self: center;
