--- a/styles/index.css
+++ b/styles/index.css
@@ -864,6 +864,7 @@ footer h4{
     .main-left h1 {
         text-align: center;
         font-style: normal;
+        font-weight: bold;
         font-size: 32px !important;
         line-height: 42px;
     }
